<resources>
    <string name="app_name">AgroSmart</string>
    <string name="app_version">v1.4.2</string>

    <string name="Login_here">Already a member? <u>Login here</u>.</string>
    <string name="Register_Now">Don\'t have an account? <u>Register now</u>.</string>
    <string name="go_back">Go back</string>
    <string name="light_status">Light Status</string>
    <string name="icons_description">Image Icons</string>
    <string name="motor_status">Motor Status</string>
    <string name="rain_stats">Current Weather</string>
    <string name="light_intensity">Light Intensity</string>
    <string name="soil_moisture_2">Soil Moisture 2</string>
    <string name="sensor_information">Sensor information</string>
    <string name="transparent_leaf">Transparent leaf</string>
    <string name="warning_icon">warning icon</string>
    <string name="soil_moisture_1">Soil Moisture 1</string>
    <string name="humidity">Humidity(%)</string>
    <string name="temperature">Temperature(°C)</string>
    <string name="reminder">Reminder</string>
    <string name="sensor_monitoring">Sensor Monitoring</string>
    <string name="image_processing">Image Processing</string>
    <string name="settings">Settings</string>
    <string name="login_bt">Login</string>
    <string name="logo_name">Name of the app</string>
    <string name="Top_green">Rounded green circle</string>
    <string name="logo">logo of the app</string>
    <string name="user_email">Email Address</string>
    <string name="PasswordString">⬤⬤⬤⬤⬤⬤⬤⬤</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_with_google">Login With Google</string>
    <string name="user_name">User Name</string>
    <string name="Password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signUp_bt">Sign Up</string>
    <string name="add_image">Add \n Image</string>
    <string name="settings_text">Settings</string>

    <string name="settings_about_dialog_text"><b>Hi!</b> I\'m Dananjaya Bandara, the developer of Agrosmart.
        \n
        \nI\'m a <b>Software Engineering student at <a href="https://www.nsbm.ac.lk/">NSBM University</a></b> and a plant lover myself.
        \n
        \nCombining <b>my two hobbies</b>, I designed Agrosmart to <b>simplify plant care tasks</b> and bring the world of farming closer <b>to everyone</b>.
        \n
        \nThanks for using it! </string>

    <string name="settings_license_dialog_text">Wateria\'s development wouldn\'t have been possible without the help of this projects:
        \n
        \n<b>Firebase API</b> by google <a href="https://firebase.google.com/">Firebase</a>
        \n
        \nModel Trained with <a href="https://teachablemachine.withgoogle.com/">Teachable Machine</a> API and <a href ="https://www.tensorflow.org/lite/api_docs">TensorFlow lite</a> API Powered by <b>Tensorflow</b>
        \n
        \n<b>Icons and images</b> designed by <a href="https://www.freepik.com">Freepik</a> and published at <a href="https://www.flaticon.com/">Flaticon</a>
    </string>
    <string name="settings_notif_enabler_text">Notifications</string>
    <string name="settings_notif_timing_text">Notify at</string>
    <string name="settings_notif_postpone_text">Postpone for</string>
    <string name="settings_delete_text">Delete data</string>
    <string name="settings_license_text">Licenses</string>
    <string name="settings_about_text">About</string>
    <string name="settings_dialog_explanation1">You can postpone the watering reminders to be <b>notified later in the day</b>. </string>
    <string name="settings_dialog_explanation2">Specify <b>the delaying time</b> to be used.</string>
    <string name="reminder_dialog_explanation1">You can assign the watering time. \n  But you can only possible up to <b>60 minutes</b>. </string>
    //image processing activity
    <string name="create_a_model_long_pressed">Not Detect your Plants? Create A Model</string>
    <string name="create_a_model">Not Detect your Plants? <u>Create A Model</u></string>
    <string name="select_a_picture">Select A Picture</string>


    //openWeatherAPIkey
    <string name="weather_api_key">1ac2a860afc2bde2cbc1ebdee97766a3</string>
    <!--<string name="admin" >crmQ5LZXvAQBGn5cEje7S0Svu3x1</string>-->

    <string name="admin">SqF2o8KwNjgjIyIWmepOgWj7EFC2</string>
    <string name="delete_data">Do you want to delete all <b>TempData</b> ?  by pressing okayit will start deleting files</string>
    <string name="default_notification_channel_id">myChannel</string>
    <string name="compare_dialog_text">myChannel</string>

    <string name="recognize_dialog_text"><b>Are you satisfied with these Results?</b> By pressing okay will be continued with default settings.\npress <b>Compare</b> for comparing with the sensors whether values are tallie with the outcome
    </string>
    <string name="recognized_dialog_title">Are you satisfied with these Results?</string>
    <string name="onboard_dialog_1_text">Welcome to Agrosmart! 🌱 The Automated Smart Watering System app that helps you and your plants thrive.</string>
    <string name="watering_time">Watering Time :</string>
    <string name="dialog_compare_text_oneDry">According to the sensors, one sensor that detects soil moisture is <b>dry</b>. We recommend watering the plant for at least <b>15 minutes</b>.</string>
    <string name="dialog_compare_text_wet">According to the sensors, the soil moisture is detected as <b>wet</b>. Therefore watering is <b>not necessary</b>.</string>
    <string name="dialog_compare_text_allDry">According to the sensors, all the sensors that detect soil moisture <b>dry out</b>. We recommend watering the plant for at least <b>35 minutes</b>.</string>
    <string name="onboard_dialog_4">It seems like you are a newbie,<b> huh..</b>💁🏻 \n Since you are new to the app, <b>how about login first?</b></string>
    <string name="info_text2">Check every information of the field such as <b>humidity, temperature, Light Intensity, soil moisture</b> via your app.</string>
    <string name="info_text3">Create you Own model for your plants <b> Just by adding images </b>if default model is not recognizing your plant.</string>


</resources>