<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_dialog_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/green_logo" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="33dp"

            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/Green"
            android:textSize="28sp"
            app:fontFamily="@font/baloo_bhai"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

        <TextView
            android:id="@+id/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dimen_settings_about_dialog_version_padding"
            android:textColor="@color/Grey"
            android:textSize="18sp"
            android:text="@string/app_version"
            app:fontFamily="@font/allerta_stencil"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"/>

        <TextView
            android:id="@+id/settings_about_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:textColor="@color/Green"
            android:textSize="17sp"
            android:layout_marginHorizontal="24dp"
            android:text="@string/settings_about_dialog_text"
            app:layout_constraintTop_toBottomOf="@id/app_version"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="start"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/about_close_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_settings_dialog_accept_button_height"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_about_text"
            android:background="@drawable/google_btn"
            android:backgroundTint="@color/Green"
            android:layout_margin="@dimen/dimen_settings_dialog_accept_button_margin"
            style="?android:attr/borderlessButtonStyle"
            android:onClick="onAcceptButtonClicked"
            android:text="Close"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>