<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_dialog_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/baloo_bhai"
            android:gravity="center_horizontal"
            android:text="@string/settings_notif_postpone_text"
            android:textAllCaps="true"
            android:textColor="@color/Green"
            android:textSize="@dimen/dimen_settings_about_dialog_title_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/explanation1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:textColor="@color/Green"
            android:textSize="16sp"
            android:layout_marginHorizontal="@dimen/dimen_settings_margin_right"
            android:text="@string/settings_dialog_explanation1"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/explanation2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:textColor="@color/Green"
            android:textSize="16sp"
            android:layout_marginHorizontal="@dimen/dimen_settings_margin_right"
            android:text="@string/settings_dialog_explanation2"

            app:layout_constraintTop_toBottomOf="@id/explanation1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.example.agrosmart.NumberPickers.GreenNumberPicker
            android:id="@+id/settings_postpone_numberpicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/explanation2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/settings_postpone_hours_text"
            android:focusable="true"
            />

        <TextView
            android:id="@+id/settings_postpone_hours_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_settings_margin_right"
            android:textColor="@color/colorPrimary"
            android:text="hours"
            android:textSize="@dimen/dimen_cell_days_font_size"
            app:layout_constraintTop_toTopOf="@id/settings_postpone_numberpicker"
            app:layout_constraintBottom_toBottomOf="@id/settings_postpone_numberpicker"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/postpone_accept_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_settings_dialog_accept_button_height"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_postpone_numberpicker"
            android:background="@drawable/round_rectangle"
            android:backgroundTint="@color/Green"
            android:layout_margin="@dimen/dimen_settings_dialog_accept_button_margin"
            style="?android:attr/borderlessButtonStyle"
            android:text="Accept"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>